모바일 gnb > 합치고 , default.scss 수정

--- a/assets/css/default.scss
+++ b/assets/css/default.scss
@@ -5,6 +5,7 @@ html {
     min-width: 320px;
 }
 body {
+    position: relative;
     min-width: 320px;
     color: #666;
     font-size: 13px;
@@ -122,186 +123,40 @@ select.form-control {
     font-weight: bold;
     text-decoration: none;
 }
-
-/* Header */
-#header {
-    position: relative;
-    height: 127px;
-    z-index: 1;
-    @media (max-width: $lg - 1px) {
-        height: 55px;
-    }
-    @media (max-width: $md - 1px) {
-        height: 55px;
-    }
-    @media (max-width: $xs - 1px) {
-        height: 55px;
-    }
-    .top-menu {
-        text-align: right;
-        border-bottom: 1px solid #e5e5e5;
-        ul {
-            width: 1170px;
-            height: 35px;
-            margin: 0 auto;
-            li {
-                font-size: 10px;
-                line-height: 35px;
-                display: inline-block;
-                &:after {
-                    content: "|";
-                    font-size: 10px;
-                    padding: 0 14px;
-                }
-                &:last-child:after {
-                    content: "";
-                    padding: 0;
-                }
-                &:nth-of-type(3):after {
-                    content: "";
-                    display: inline-block;
-                    padding: 0;
-                    padding-right: 10px;
-                }
-            }
-            .active {
-                width: 110px;
-                a {
-                    text-align: center;
-                    display: block;
-                    color: #fff;
-                    background-color: $rc;
-                }
-            }
-        }
-    }
-    #gnb {
-        position: absolute;
-        z-index: 9100;
-        top: 36px;
-        width: 100%;
-        height: 91px;
+body {
+    padding-top: 50px;
+    &.gnb-opened {
         overflow: hidden;
-        background-color: #fff;
-        @media (max-width: $lg - 1px) {
-            position: absolute;
-            top: 0;
-            height: 55px;
+        height: 100%;
+        #header {
+            .logo {
+                .btn-menu {
+                    &:before {
+                        content: url(/assets/images/main/ico_close.png);
+                        vertical-align: -7px;
+                    }
+                }
+            }
+            .menu {
+                display: block;
+            }
         }
-        @media (max-width: $md - 1px) {
-            position: absolute;
-            top: 0;
-            height: 55px;
-        }
-        &.opened {
+    }
+    @media (min-width: $sm) {
+        padding-top: 60px;
+    }
+    @media (min-width: $lg) {
+        padding-top: 127px;
+        &.gnb-opened {
+            overflow: auto;
             height: auto;
-            .wrapper {
-                .container {
+            #header {
+                height: 370px;
+                .menu {
                     > ul {
                         > li {
                             > ul {
                                 display: block;
-                            }
-                        }
-                    }
-                }
-            }
-        }
-        .wrapper {
-            height: 91px;
-            border-bottom: 3px solid $rc;
-            background-color: #fff;
-            @media (max-width: $lg - 1) {
-                height: 55px;
-            }
-            @media (max-width: $md - 1) {
-                height: 55px;
-            }
-            .container {
-                position: relative;
-                .main-logo {
-                    float: left;
-                    margin-top: 24px;
-                    @media (max-width: $lg - 1) {
-                        float: left;
-                        marin-left: 22px;
-                        margin-top: 14px;
-                    }
-                    @media (max-width: $sm - 1) {
-                        float: left;
-                        marin-left: 22px;
-                        margin-top: 14px;
-                    }
-                    @media (max-width: $xs - 1) {
-                        float: left;
-                        marin-left: 10px;
-                        margin-top: 14px;
-                    }
-                }
-                .md-menu {
-                    float: right;
-                    text-align: right;
-                    margin-top: 16px;
-                    padding: 0;
-                    .btn-menu {
-                        background-color: #fff;
-                        padding: 0;
-                        .bar {
-                            width: 22px;
-                            height: 15px;
-                            display: block;
-                            background-image: url(/assets/images/main/bar_btn.png);
-                            background-repeat: no-repeat;
-                            background-position: 0 0;
-                        }
-                    }
-                }
-                > .menu-list {
-                    float: right;
-                    > li {
-                        float: left;
-                        width: 162px;
-                        > a {
-                            display: block;
-                            font-size: 18px;
-                            color: #222;
-                            font-weight: bold;
-                            text-align: center;
-                            line-height: 91px;
-                            text-decoration: none;
-                        }
-                        > ul {
-                            display: none;
-                            position: relative;
-                            min-height: 210px;
-                            padding-top: 25px;
-                            padding-bottom: 25px;
-                            height: 100%;
-                            > li {
-                                > a {
-                                    display: block;
-                                    text-align: center;
-                                    font-size: 14px;
-                                    color: #222;
-                                    line-height: 35px;
-                                }
-                            }
-                        }
-                        &:focus,
-                        &:hover {
-                            > a {
-                                color: #222;
-                            }
-                            > ul {
-                                background-color: #f1f1f1;
-                                > li {
-                                    > a {
-                                        color: #222;
-                                        &:hover {
-                                            color: $rc;
-                                        }
-                                    }
-                                }
                             }
                         }
                     }
@@ -310,108 +165,246 @@ select.form-control {
         }
     }
 }
-#nav {
+
+#header {
     position: fixed;
+    z-index: 9000;
     top: 0;
-    right: 0;
+    left: 0;
     width: 100%;
-    height: 100%;
-    background-color: rgba(#000, .6);
-    z-index: 900;
-    .nav-backdrop {
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 901;
+    height: 50px;
+    border-bottom: 2px solid #d90c1c;
+    background-color: #fff;
+    @media (min-width: $sm) {
+        height: 60px;
+        border-bottom: 3px solid #d90c1c;
     }
-    .nav-container {
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 80%;
-        height: 100%;
-        background-color: #fff;
-        transition: all .3s;
-        z-index: 910;
-        .nav-content {
-            overflow: scroll;
-            height: 100%;
-            .nav-head {
-                width: 100%;
-                position: relative;
-                background-color: #fff;
-                h1 {
-                    width: 134px;
-                    text-align: left;
-                    padding-left: 22px;
-                    img {
+    @media (min-width: $lg) {
+        overflow: hidden;
+        height: 127px;
+        border-bottom: 0;
+        -webkit-transition: height .3s;
+        transition: height .3s;
+        .top-menu {
+            text-align: right;
+            border-bottom: 1px solid #e5e5e5;
+            ul {
+                width: 1170px;
+                height: 35px;
+                margin: 0 auto;
+                li {
+                    font-size: 10px;
+                    line-height: 35px;
+                    display: inline-block;
+                    &:after {
+                        content: "|";
+                        font-size: 10px;
+                        padding: 0 14px;
+                        vertical-align: 0;
+                        line-height: 35px;
+                    }
+                    &:last-child:after {
+                        content: "";
+                        padding: 0;
+                    }
+                    &:nth-of-type(3):after {
+                        content: "";
                         display: inline-block;
-                        width: 134px;
+                        padding: 0;
+                        padding-right: 10px;
                     }
                 }
-                .btn-nav-close {
-                    position: absolute;
-                    top: 0;
-                    right: 22px;
+                .active {
+                    width: 110px;
+                    a {
+                        text-align: center;
+                        display: block;
+                        color: #fff;
+                        background-color: $rc;
+                    }
                 }
             }
-            .gnb {
-                > li {
-                    overflow: hidden;
-                    border-bottom: 1px solid #dadada;
-                    > a {
-                        display: block;
-                        width: 100%;
-                        height: 36px;
-                        font-size: 13.3px;
-                        color: #333;
-                        font-weight: 600;
-                        line-height: 36px;
-                        padding-left: 20px;
-                        &:hover,
-                        &:focus {
+        }
+        #gnb {
+            height: 91px;
+            border-bottom: 3px solid #d90c1c;
+        }
+    }
+    .logo {
+        position: relative;
+        height: 50px;
+        h1 {
+            float: left;
+        }
+        .btn-menu {
+            position: relative;
+            float: right;
+            z-index: 9001;
+            margin-top: 10px;
+            padding: 0;
+            background-color: #fff;
+            opacity: 1;
+            &:before {
+                content: url(/assets/images/main/ico_menu.png);
+                vertical-align: -7px;
+            }
+        }
+        @media (min-width: $sm) {
+            height: 60px;
+            h1 {
+                margin-top: 5px;
+            }
+            .btn-menu {
+                margin-top: 15px;
+            }
+        }
+        @media (min-width: $lg) {
+            height: auto;
+            h1 {
+                float: none;
+                margin-top: 25px;
+            }
+        }
+    }
+    .menu {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        padding-top: 50px;
+        height: 100%;
+        width: 100%;
+        > ul {
+            overflow: auto;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, .5);
+            > li {
+                border-top: 1px solid #d3d1d0;
+                background-color: #fff;
+                > a {
+                    display: inline-block;
+                    padding-left: 10px;
+                    padding-right: 10px;
+                    width: 100%;
+                    line-height: 50px;
+                    font-size: 14px;
+                    color: #222;
+                    text-decoration: none;
+                    &:after {
+                        float: right;
+                        content: url(/assets/images/main/ico_down_block.png);
+                    }
+                }
+                > ul {
+                    display: none;
+                    padding-top: 20px;
+                    padding-bottom: 20px;
+                    background-color: #f7f7f7;
+                    > li {
+                        > a {
+                            display: inline-block;
+                            padding-left: 20px;
+                            padding-right: 20px;
+                            width: 100%;
+                            font-size: 14px;
+                            line-height: 38px;
                             text-decoration: none;
                         }
-                        .glyphicon {
-                            float: right;
-                            color: #999;
-                            line-height: 36px;
-                            padding-right: 20px;
+                    }
+                }
+                &.active {
+                    border-top: 0;
+                    > a {
+                        color: #fff;
+                        background-color: #e60012;
+                        &:after {
+                            content: url(/assets/images/main/ico_up_red.png);
                         }
                     }
                     > ul {
-                        display: none;
-                        padding-top: 10px;
-                        padding-bottom: 10px;
-                        background-color: #f9f9f9;
+                        display: block;
+                    }
+                }
+            }
+        }
+        @media (min-width: $sm) {
+            padding-top: 60px;
+            > ul {
+                > li {
+                    > a {
+                        padding-left: 20px;
+                        padding-right: 20px;
+                        line-height: 60px;
+                        font-size: 17px;
+                    }
+                    > ul {
                         > li {
                             > a {
-                                display: block;
-                                width: 100%;
-                                font-size: 12.6px;
-                                color: #333;
-                                font-weight: 400;
-                                line-height: 25px;
-                                padding-left: 38.66px;
+                                padding-left: 40px;
+                                padding-right: 40px;
+                                font-size: 17px;
+                                line-height: 48px;
                             }
+                        }
+                    }
+                }
+            }
+        }
+        @media (min-width: $lg) {
+            position: relative;
+            top: auto;
+            left: auto;
+            float: right;
+            display: block;
+            width: auto;
+            padding-top: 0;
+            > ul {
+                display: block;
+                background-color: transparent;
+                > li {
+                    float: left;
+                    border-top: 0;
+                    background-color: transparent;
+                    > a {
+                        padding-left: 50px;
+                        padding-right: 50px;
+                        line-height: 91px;
+                        font-size: 18px;
+                        &:after {
+                            content: "";
+                        }
+                    }
+                    > ul {
+                        padding-top: 25px;
+                        padding-bottom: 0;
+                        height: 243px;
+                        background-color: transparent;
+                        > li {
+                            > a {
+                                padding-left: 50px;
+                                padding-right: 0;
+                                font-size: 14px;
+                                line-height: 35px;
+                                &:hover,
+                                &:focus {
+                                    color: #d90c1c;
+                                }
+                            }
+                        }
+                    }
+                    &:hover,
+                    &:focus {
+                        > ul {
+                            background-color: #f1f1f1;
                         }
                     }
                     &.active {
-                        border-bottom: 0;
-                        > ul {
-                            display: block;
-                            > li {
-                                a {
-                                    &:hover {
-                                        text-decoration: none;
-                                    }
-                                    &:focus {
-                                        text-decoration: none;
-                                        color: #9f080d;
-                                    }
-                                }
+                        > a {
+                            background-color: transparent;
+                            color: #222;
+                            &:after {
+                                content: '';
                             }
                         }
                     }
@@ -419,21 +412,7 @@ select.form-control {
             }
         }
     }
-    &.collapsed {
-        right: -100%;
-        .nav-container {
-            right: -270px;
-        }
-    }
 }
-body.nav-opened {
-    position: relative;
-    overflow: hidden;
-    width: 100%;
-    height: 100%;
-}
-
-
 
 /* Footer */
 #footer {
@@ -496,15 +475,13 @@ body.nav-opened {
             }
             dl {
                 line-height: 25px;
-                &:nth-of-type(1) {
-                    @media (max-width: $lg - 1) {
-                        margin-right: 10px;
-                    }
-                }
                 @media (max-width: $lg - 1) {
                     margin-top: 10px;
                     display: inline-block;
                     text-align: center;
+                    &:nth-of-type(1) {
+                        margin-right: 10px;
+                    }
                 }
                 @media (max-width: $sm - 1) {
                     margin-top: 0;
@@ -617,45 +594,3 @@ body.nav-opened {
         }
     }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
